--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,8 +14,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: make
-      run: make -C bktree build
+      run: make -C bktree
     - name: make check
       run: make check
-    - name: make distcheck
-      run: make distcheck
